A search engine update. It now works with tags and weight-sorting.
* New ProductBox class works like History class
* Catch exceptions should now show up in an Alert but not
correctly/lacking information.
* Search now filters any object but needs string extractor function
(Function<Object, String>).