@@ -16,10 +16,12 @@ import net.starkus.stock.model.AutoCompleteTextField;
 import net.starkus.stock.model.BinarySearch;
 import net.starkus.stock.model.Dialog;
 import net.starkus.stock.model.Product;
+import net.starkus.stock.model.ProductBox;
 //import net.starkus.stock.model.ProductList;
 import net.starkus.stock.model.ProductListWithTotal;
 import net.starkus.stock.model.Purchase;
 import net.starkus.stock.util.DateUtil;
+import net.starkus.stock.util.ExceptionUtil;
 
 public class AddStockDialogController extends DialogController {
 	
@@ -83,7 +85,7 @@ public class AddStockDialogController extends DialogController {
     public void setMainApp(MainApp mainApp) {
     	this.mainApp = mainApp;
 
-    	for (Product p : mainApp.getProductData()) {
+    	for (Product p : ProductBox.getProducts()) {
     		codeNameField.getEntries().add(p.getName());
     	}
     }
@@ -95,11 +97,11 @@ public class AddStockDialogController extends DialogController {
     	try {
 			long code = Long.parseLong(text);
 			
-			product = BinarySearch.findProductByCode(code, mainApp.getSortedProductData());
+			product = BinarySearch.findProductByCode(code, ProductBox.getProducts().sorted());
 		}
 		catch (NumberFormatException e) {
 			
-			for (Product p : mainApp.getProductData()) {
+			for (Product p : ProductBox.getProducts()) {
 				if (text.equals(p.getName())) {
 					
 					product = p;
@@ -130,7 +132,7 @@ public class AddStockDialogController extends DialogController {
 		
 		// If entry, use entry
 		if (codeNameField.getResults().size() > 0) {
-			codeNameField.setText(codeNameField.getResults().getFirst());
+			codeNameField.setText(codeNameField.getResults().get(0));
 		}
 		
 		quantField.requestFocus();
@@ -187,7 +189,7 @@ public class AddStockDialogController extends DialogController {
 		}
 		catch (IOException e) {
 
-			e.printStackTrace();
+			ExceptionUtil.printStackTrace(e);
 			return;
 		}
 		
